# Fraetor

./: .env.example  .gitignore  CLAUDE.md  README.md  check_code_quality.sh  design.md  pyproject.toml  skills-lock.json  todo.md  toggle-recording.sh
.claude/: hookify.block-bare-python.local.md  hookify.block-quality-check-commands.local.md  settings.json
.claude/skills/impl/: SKILL.md
.claude/skills/impl/scripts/: stop_commit_prompt.sh
docs/: .gitignore  azure-stt-only-spec.md  gemini-audio-workaround.md  mai-transcribe-1-research.md
docs/candidate/: design.md  lapapa2.md  resume.txt
src/: __main__.py  app.py  audio.py  clipboard.py  config.py  correction.py  history.py  hotkey.py  logging_config.py  models.py  proofreader.py  routes.py  secrets_loader.py  session_manager.py  sse.py  state.py  stt.py  stt_azure.py  stt_base.py  stt_factory.py  stt_mai.py
src/templates/: index.html
tests/: conftest.py  test_audio.py  test_clipboard.py  test_config.py  test_correction.py  test_history.py  test_hotkey.py  test_logging_config.py  test_proofreader.py  test_routes.py  test_secrets_loader.py  test_session_manager.py  test_sse.py  test_state.py  test_stt.py  test_stt_azure.py  test_stt_factory.py  test_stt_mai.py
